[gd_scene load_steps=82 format=3 uid="uid://hf1gy00p6voq"]

[ext_resource type="Texture2D" uid="uid://62pgw3o2q3lm" path="res://Assets/Enemy/Skeleton Attack.png" id="1_prlpq"]
[ext_resource type="Script" path="res://Scenes/skeleton.gd" id="1_rqnvy"]
[ext_resource type="Texture2D" uid="uid://cumvthrvtbph1" path="res://Assets/Enemy/Skeleton Dead.png" id="2_d6fym"]
[ext_resource type="Texture2D" uid="uid://c5a7swnfyp4t" path="res://Assets/Enemy/Skeleton Hit.png" id="3_gc6yx"]
[ext_resource type="Texture2D" uid="uid://pn2yg0mv77aw" path="res://Assets/Enemy/Skeleton Walk.png" id="4_5p5ss"]
[ext_resource type="Texture2D" uid="uid://yemx66du3t4e" path="res://Assets/Enemy/Skeleton Idle.png" id="6_1c2ek"]
[ext_resource type="Texture2D" uid="uid://b8tntjsthkm68" path="res://Assets/UI/enemy_back.png" id="7_gah6n"]
[ext_resource type="Texture2D" uid="uid://bgsrgxcvloxey" path="res://Assets/UI/enemy_full.png" id="8_q3i8q"]
[ext_resource type="Script" path="res://Scenes/EnemyHP.gd" id="9_ou21r"]
[ext_resource type="AudioStream" uid="uid://dikgjysid86m4" path="res://Assets/SFX/08_Bite_04.wav" id="10_3ufm4"]
[ext_resource type="AudioStream" uid="uid://bwhmwlbvbqp47" path="res://Assets/SFX/61_Hit_03.wav" id="11_oxix5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhu5r"]
size = Vector2(17, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtx6m"]
atlas = ExtResource("1_prlpq")
region = Rect2(0, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pivx"]
atlas = ExtResource("1_prlpq")
region = Rect2(43, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l810"]
atlas = ExtResource("1_prlpq")
region = Rect2(86, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdk3a"]
atlas = ExtResource("1_prlpq")
region = Rect2(129, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx6ul"]
atlas = ExtResource("1_prlpq")
region = Rect2(172, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyux1"]
atlas = ExtResource("1_prlpq")
region = Rect2(215, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rce7i"]
atlas = ExtResource("1_prlpq")
region = Rect2(258, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7j15l"]
atlas = ExtResource("1_prlpq")
region = Rect2(301, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxaqy"]
atlas = ExtResource("1_prlpq")
region = Rect2(344, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_542rl"]
atlas = ExtResource("1_prlpq")
region = Rect2(387, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_5fukj"]
atlas = ExtResource("1_prlpq")
region = Rect2(430, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3oqc"]
atlas = ExtResource("1_prlpq")
region = Rect2(473, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_7225w"]
atlas = ExtResource("1_prlpq")
region = Rect2(516, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dij16"]
atlas = ExtResource("1_prlpq")
region = Rect2(559, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcoge"]
atlas = ExtResource("1_prlpq")
region = Rect2(602, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5ywq"]
atlas = ExtResource("1_prlpq")
region = Rect2(645, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdom1"]
atlas = ExtResource("1_prlpq")
region = Rect2(688, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bs03s"]
atlas = ExtResource("1_prlpq")
region = Rect2(731, 0, 43, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_38j65"]
atlas = ExtResource("2_d6fym")
region = Rect2(0, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_by3j7"]
atlas = ExtResource("2_d6fym")
region = Rect2(33, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6ouv"]
atlas = ExtResource("2_d6fym")
region = Rect2(66, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oklv2"]
atlas = ExtResource("2_d6fym")
region = Rect2(99, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77ilm"]
atlas = ExtResource("2_d6fym")
region = Rect2(132, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujtp1"]
atlas = ExtResource("2_d6fym")
region = Rect2(165, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu0eh"]
atlas = ExtResource("2_d6fym")
region = Rect2(198, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37p62"]
atlas = ExtResource("2_d6fym")
region = Rect2(231, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrnpf"]
atlas = ExtResource("2_d6fym")
region = Rect2(264, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_50o0k"]
atlas = ExtResource("2_d6fym")
region = Rect2(297, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3qum"]
atlas = ExtResource("2_d6fym")
region = Rect2(330, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my8pc"]
atlas = ExtResource("2_d6fym")
region = Rect2(363, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7wy2"]
atlas = ExtResource("2_d6fym")
region = Rect2(396, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjorx"]
atlas = ExtResource("2_d6fym")
region = Rect2(429, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gfyt"]
atlas = ExtResource("2_d6fym")
region = Rect2(462, 0, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujm40"]
atlas = ExtResource("3_gc6yx")
region = Rect2(0, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxq1a"]
atlas = ExtResource("3_gc6yx")
region = Rect2(30, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwipw"]
atlas = ExtResource("3_gc6yx")
region = Rect2(60, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6sy5"]
atlas = ExtResource("3_gc6yx")
region = Rect2(90, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgt06"]
atlas = ExtResource("3_gc6yx")
region = Rect2(120, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_45krk"]
atlas = ExtResource("3_gc6yx")
region = Rect2(150, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_an36c"]
atlas = ExtResource("3_gc6yx")
region = Rect2(180, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q7ym"]
atlas = ExtResource("3_gc6yx")
region = Rect2(210, 0, 30, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8825"]
atlas = ExtResource("4_5p5ss")
region = Rect2(0, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_5j458"]
atlas = ExtResource("4_5p5ss")
region = Rect2(22, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpew5"]
atlas = ExtResource("4_5p5ss")
region = Rect2(44, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_k78cb"]
atlas = ExtResource("4_5p5ss")
region = Rect2(66, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbifx"]
atlas = ExtResource("4_5p5ss")
region = Rect2(88, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yjv2"]
atlas = ExtResource("4_5p5ss")
region = Rect2(110, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh7li"]
atlas = ExtResource("4_5p5ss")
region = Rect2(132, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7bk8"]
atlas = ExtResource("4_5p5ss")
region = Rect2(154, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7ami"]
atlas = ExtResource("4_5p5ss")
region = Rect2(176, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_jei7k"]
atlas = ExtResource("4_5p5ss")
region = Rect2(198, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvnrp"]
atlas = ExtResource("4_5p5ss")
region = Rect2(220, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3816"]
atlas = ExtResource("4_5p5ss")
region = Rect2(242, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_djqkn"]
atlas = ExtResource("4_5p5ss")
region = Rect2(264, 0, 22, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwe7b"]
atlas = ExtResource("6_1c2ek")
region = Rect2(0, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iguyf"]
atlas = ExtResource("6_1c2ek")
region = Rect2(24, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq6ha"]
atlas = ExtResource("6_1c2ek")
region = Rect2(48, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khprc"]
atlas = ExtResource("6_1c2ek")
region = Rect2(72, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjbhu"]
atlas = ExtResource("6_1c2ek")
region = Rect2(96, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuhll"]
atlas = ExtResource("6_1c2ek")
region = Rect2(120, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6iku4"]
atlas = ExtResource("6_1c2ek")
region = Rect2(144, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qbdbv"]
atlas = ExtResource("6_1c2ek")
region = Rect2(168, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f0aii"]
atlas = ExtResource("6_1c2ek")
region = Rect2(192, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_quc7a"]
atlas = ExtResource("6_1c2ek")
region = Rect2(216, 0, 24, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv0yg"]
atlas = ExtResource("6_1c2ek")
region = Rect2(240, 0, 24, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kvarr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pivx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l810")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdk3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx6ul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyux1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rce7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7j15l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxaqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_542rl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5fukj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3oqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7225w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dij16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcoge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5ywq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdom1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bs03s")
}],
"loop": true,
"name": &"attack",
"speed": 27.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_38j65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by3j7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6ouv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oklv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77ilm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujtp1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu0eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37p62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrnpf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50o0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3qum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my8pc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7wy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjorx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gfyt")
}],
"loop": true,
"name": &"die",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujm40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxq1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwipw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6sy5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgt06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45krk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_an36c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q7ym")
}],
"loop": true,
"name": &"get_damage",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8825")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5j458")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpew5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k78cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbifx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yjv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh7li")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7bk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7ami")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jei7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvnrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3816")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djqkn")
}],
"loop": true,
"name": &"go",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwe7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iguyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq6ha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khprc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjbhu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuhll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6iku4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qbdbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f0aii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_quc7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv0yg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ucxa"]
size = Vector2(263, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_prcjg"]
size = Vector2(1, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hj50t"]
size = Vector2(13, 25)

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_rqnvy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 4.5)
shape = SubResource("RectangleShape2D_jhu5r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kvarr")
animation = &"die"
frame_progress = 0.0701679

[node name="VisibleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisibleArea"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_7ucxa")

[node name="DamageArea" type="Area2D" parent="."]

[node name="dmg" type="CollisionShape2D" parent="DamageArea"]
position = Vector2(7.5, 4.5)
shape = SubResource("RectangleShape2D_prcjg")

[node name="Timer" type="Timer" parent="."]

[node name="AgrArea" type="Area2D" parent="."]

[node name="Agr" type="CollisionShape2D" parent="AgrArea"]
position = Vector2(12.5, 4.5)
shape = SubResource("RectangleShape2D_hj50t")
disabled = true

[node name="EnemyHP" type="TextureProgressBar" parent="."]
offset_left = -16.0
offset_top = -23.0
offset_right = 17.0
offset_bottom = 14.0
texture_under = ExtResource("7_gah6n")
texture_progress = ExtResource("8_q3i8q")
script = ExtResource("9_ou21r")

[node name="Audio" type="Node2D" parent="."]

[node name="Attack" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("10_3ufm4")

[node name="Hit" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("11_oxix5")

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="VisibleArea" to="." method="_on_visible_area_body_entered"]
[connection signal="body_exited" from="VisibleArea" to="." method="_on_visible_area_body_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="AgrArea" to="." method="_on_agr_area_body_entered"]
